--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,3 +16,8 @@ jobs:
               run: date
             - name: show directory
               run: ls -l
+            - uses: actions/setup-node@v4
+            - name: install dependencies
+              run: npm install
+            - name: Lint
+              run: npm run eslint
